# tablebin-python

./: README.md  pyproject.toml
src/: main.py
src/tablebin/: __init__.py  conditions.py  exceptions.py  formatters.py  row.py  style.py  tablebin.py
src/tablebin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
