# pyproject.toml

[build-system]  
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tablebin"
version = "1.1.2"
description = "A light weight python api for the table bin platform."
readme = "README.md"
authors = [{name = "boldrack", email = "me@boldrack.dev"}]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
keywords = ["table", "api"]
dependencies = [
  "requests"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["bumpver", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/boldrack/tablebin-python"

[tool.bumpver]
current_version = "1.1.2"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
# "README.md" = [
#     "{version}",
#     "{pep440_version}",
# ]
#
